update index description with ansible

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>This is a index page</title>
     </head>
 <body>
-    <h1>This is a static sample page</h1>
+    <h1>This is a static sample page from ansible</h1>
 </body>
 </html>
